--- a/sandbox/src/components/tabs-text/tabs-text.scss
+++ b/sandbox/src/components/tabs-text/tabs-text.scss
@@ -29,9 +29,21 @@
 
     -webkit-overflow-scrolling: touch;
 
+    background: linear-gradient(90deg,#fff 30%,rgba(255,255,255,0)),
+    linear-gradient(90deg,rgba(255,255,255,0),#fff 70%) 0 100%,
+    radial-gradient(farthest-side at 0 50%,rgba(0,0,0,.25),transparent),
+    radial-gradient(farthest-side at 100% 50%,rgba(0,0,0,.25),transparent) 0 100%;
+  background-color: #ffffff;
+  background-position: 0 0,100%,0 0,100%;
+  background-repeat: no-repeat;
+  background-attachment: local, local, scroll, scroll;
+  background-size: 20px 100%,20px 100%,10px 100%,10px 100%;
+
     &::-webkit-scrollbar {
       display: none;
     }
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
 
     &:focus, &.focus-visible {
       outline: 2px dotted #888;
@@ -52,7 +64,7 @@
 }
 
 .c-tabs__tablist--dotnav .c-tabs__tab {
-      padding: 1rem;
+      padding: .75rem;
       border-radius: 50%;
       color: #000;
       border: 2px dotted transparent;
@@ -127,10 +139,19 @@
 }
 
 .c-tabs__tabpanel {
-    &:focus {
+    &:focus, &.focus-visible {
       outline: 4px dotted #888;
       outline-offset: 5px;
     }
+
+    &:focus:not(:focus-visible) {
+          outline: none;
+          border-color: transparent;
+      }
+      .js-focus-visible &:focus:not(.focus-visible) {
+          outline: none;
+          border-color: transparent;
+      }
 }
 
 
