--- a/sandbox/src/components/testimonials/testimonials.scss
+++ b/sandbox/src/components/testimonials/testimonials.scss
@@ -12,22 +12,33 @@
   .c-tabs__tablist {
     grid-row: 2;
     padding: var(--v-margin);
-    margin-left: calc(var(--v-margin) * -1);
+    
 
     @media all and (min-width: 50em ) {
       margin-top: calc(var(--v-space) / 2);
     }
   }
+
+  .c-tabs__tablist--imgs {
+    margin-left: calc(var(--v-margin) * -1);
+  }
   
   .c-tabs__tablist--imgs .c-tabs__tab {
     min-width: 44px;
     margin-right: 2rem;
+    padding-bottom: .5rem;
+    border-bottom: 4px solid transparent;
 
-    &:last-of-type(){
-      margin-right: 0;
-    }
+      &:last-of-type(){
+        margin-right: 0;
+      }
 
-      &:focus, &.focus-visible {
+      &[aria-selected="true"] {
+
+        border-bottom: 8px solid var(--color--primary);
+      }
+
+      &:active, &:focus, &.focus-visible {
           outline: 4px dotted #888;
           outline-offset: 4px;   
       }
@@ -35,18 +46,10 @@
       &:focus:not(:focus-visible) {
           outline: none;
           background: none;
-
-        &[aria-selected="true"] {
-
-        }
       }
       .js-focus-visible &:focus:not(.focus-visible) {
           outline: none;
           background: none;
-
-        &[aria-selected="true"] {
-          
-        }
       }
 
       &:-moz-focusring {
@@ -85,7 +88,7 @@
 .ps-testimonials__img-wrapper {
   background-color: var(--color--secondary);
   border-radius: 16px;
-  height: 100%;
+  
 
   @media all and (min-width:50em) {
         width: 100%;
@@ -141,6 +144,7 @@
         background-image: url('../img/quote-triangle.svg');
         background-size: 100% auto;
         transform: rotate(90deg);
+        background-repeat: no-repeat;
         bottom: -1rem;
         left: 2.5rem;
         
